[Add] "Open Series" UI Button. [Modify] "Refresh Table" methods.

--- a/studybrowser.ui
+++ b/studybrowser.ui
@@ -22,7 +22,7 @@
      <height>871</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,4,4,16">
+   <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,4,4,0,4,14">
     <item>
      <spacer name="verticalSpacer">
       <property name="orientation">
@@ -62,11 +62,49 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="browserButton_clear_all">
+     <widget class="QPushButton" name="browserButton_open_series">
       <property name="minimumSize">
        <size>
         <width>0</width>
         <height>50</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>30</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Open Series</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <widget class="QPushButton" name="browserButton_clear_all">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
