--- a/studybrowser.ui
+++ b/studybrowser.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1417</width>
-    <height>880</height>
+    <height>882</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -52,6 +52,7 @@
       </property>
       <property name="font">
        <font>
+        <pointsize>12</pointsize>
         <weight>75</weight>
         <bold>true</bold>
        </font>
@@ -77,6 +78,7 @@
       </property>
       <property name="font">
        <font>
+        <pointsize>12</pointsize>
         <weight>75</weight>
         <bold>true</bold>
        </font>
@@ -115,6 +117,7 @@
       </property>
       <property name="font">
        <font>
+        <pointsize>12</pointsize>
         <weight>75</weight>
         <bold>true</bold>
        </font>
@@ -173,7 +176,7 @@
         </property>
         <property name="font">
          <font>
-          <pointsize>25</pointsize>
+          <pointsize>20</pointsize>
           <weight>75</weight>
           <bold>true</bold>
          </font>
@@ -222,7 +225,7 @@
         </property>
         <property name="font">
          <font>
-          <pointsize>25</pointsize>
+          <pointsize>20</pointsize>
           <weight>75</weight>
           <bold>true</bold>
          </font>
@@ -245,7 +248,7 @@
         </property>
         <property name="font">
          <font>
-          <pointsize>25</pointsize>
+          <pointsize>20</pointsize>
           <weight>75</weight>
           <bold>true</bold>
          </font>
@@ -281,7 +284,7 @@
        <number>0</number>
       </property>
       <property name="textVisible">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="invertedAppearance">
        <bool>false</bool>
