--- a/imageviewer1.ui
+++ b/imageviewer1.ui
@@ -36,7 +36,7 @@
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>10</y>
+     <y>60</y>
      <width>131</width>
      <height>41</height>
     </rect>
@@ -50,6 +50,26 @@
    </property>
    <property name="text">
     <string>Process</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="imageButton_LungSegment">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>10</y>
+     <width>131</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Lung Segment</string>
    </property>
   </widget>
  </widget>
