--- a/imageviewer1.ui
+++ b/imageviewer1.ui
@@ -36,7 +36,7 @@
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>60</y>
+     <y>130</y>
      <width>131</width>
      <height>41</height>
     </rect>
@@ -56,7 +56,7 @@
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>10</y>
+     <y>80</y>
      <width>131</width>
      <height>41</height>
     </rect>
@@ -70,6 +70,35 @@
    </property>
    <property name="text">
     <string>Lung Segment</string>
+   </property>
+  </widget>
+  <widget class="QToolButton" name="imageButton_label_mode">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>10</y>
+     <width>60</width>
+     <height>60</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Label</string>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>false</bool>
+   </property>
+   <property name="autoExclusive">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
